[package]
name = "jmspack-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
authors = [
  "James Twose"
]
license = "BSD 3-Clause"
readme = "README.md"

repository = "https://github.com/jameshtwose/jmspack-rust"
documentation = ""

description = "Rust crate of functions that James finds useful."

keywords = ["machine-learning", "array", "data-structure", "data-wrangling", "matrix"]
categories = ["data-structures", "science", "data-science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jmspack"
bench = false
test = true

[dependencies]
ndarray="0.15.6"